chore(cleanup): fix useless code and cleanup